Fixed signup box centering, button text wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,8 @@ body {
 .calltoaction{
   padding: 100px 400px;
   color: white;
+  display: flex;
+  justify-content: center;
 }
 
 .signupbox {
@@ -165,7 +167,7 @@ body {
   text-align: center;
   font-size: 18px;
   padding: 20px;
-  width: 200px;
+  width: 220px;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
